--- a/theme/parts/popups-contents.css
+++ b/theme/parts/popups-contents.css
@@ -259,8 +259,11 @@
 	background: var(--gnome-menu-background);
 	border: 1px solid var(--gnome-button-border-color) !important;
 	border-radius: 9px;
-	padding: 12px 0 !important;
+	padding: 0 0 24px 0 !important;
 	margin: 0 !important;
+}
+#protections-popup-tp-switch-section-header {
+	padding: 0 !important;
 }
 
 #protections-popup[hasException] #protections-popup-tp-switch-section {
